[package]
name = "keypad-lock-fsm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Memory-safe, side-effect-free finite state machine (FSM) modeling a secure keypad lock system."
readme = "README.md"

[features]
# Optional multi-factor authentication step after correct PIN entry.
acoustic_unlock = []

[dependencies]
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.6"

[profile.release]
lto = true
codegen-units = 1